--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,7 @@
     <meta name="keyword" content="signup sample project web development Irshadprojects  ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/signup.css">
-    <title>Document</title>
+    <title>signup</title>
 </head>
 
 <body>
